--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   # Utilities
   uuid: ^4.4.0
 
+  # HTTP client for AI service
+  http: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
